k8s/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: events-api
  labels:
    app.kubernetes.io/name: events-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: Platform Engineering
    app.kubernetes.io/managed-by: ohanyere-idp
    platform.ohanyere.io/environment: dev
    finops.ohanyere.io/cost-center: platform-engineering
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: events-api
  strategy:
    canary:
      maxSurge: 25%
      maxUnavailable: 0
      steps:
        - setWeight: 20
        - pause:
            duration: 2m
        - setWeight: 50
        - pause:
            duration: 5m
        - setWeight: 100
  template:
    metadata:
      labels:
        app.kubernetes.io/name: events-api
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: Platform Engineering
        app.kubernetes.io/managed-by: ohanyere-idp
        platform.ohanyere.io/environment: dev
        finops.ohanyere.io/cost-center: platform-engineering
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "3000"
    spec:
      serviceAccountName: events-api
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: kuberpull/events-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /livez
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
